# baseball_salary_performance

./: MLB_2018_2025_Cleaned.csv  MLB_2018_2025_Perfect.csv  pyproject.toml  webscraping.ipynb
old data/: MLB_2018_2025_CLEAN_NO_AVERAGES.csv  MLB_Standard_Batting_2018-2025_FINAL.csv  mlb_batting_2018_2025.csv  mlb_batting_leaderboard_2018_2025.csv
