[project]
name = "streamlit-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "scikit-learn>=1.2.0",
    "plotly>=5.0",
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "dotenv>=0.9.9",
    "selenium>=4.38.0",
]
